<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="24dp"
                app:srcCompat="@drawable/staff_icon1"/>

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.StaffName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image"
                android:layout_toEndOf="@+id/image"
                android:layout_toRightOf="@+id/image"
                android:text="@string/name1"/>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/image"
                android:layout_toRightOf="@+id/image"
                android:text="@string/description1"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="24dp"
                app:srcCompat="@drawable/staff_icon2"/>

            <TextView
                android:id="@+id/title2"
                style="@style/TextAppearance.StaffName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image2"
                android:layout_toEndOf="@+id/image2"
                android:layout_toRightOf="@+id/image2"
                android:text="@string/name2"/>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title2"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/image2"
                android:layout_toRightOf="@+id/image2"
                android:text="@string/description2"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="24dp"
                app:srcCompat="@drawable/staff_icon3"/>

            <TextView
                android:id="@+id/title3"
                style="@style/TextAppearance.StaffName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image3"
                android:layout_toEndOf="@+id/image3"
                android:layout_toRightOf="@+id/image3"
                android:text="@string/name3"/>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title3"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/image3"
                android:layout_toRightOf="@+id/image3"
                android:text="@string/description3"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="24dp"
                app:srcCompat="@drawable/staff_icon4"/>

            <TextView
                android:id="@+id/title4"
                style="@style/TextAppearance.StaffName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image4"
                android:layout_toEndOf="@+id/image4"
                android:layout_toRightOf="@+id/image4"
                android:text="@string/name4"/>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title4"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/image4"
                android:layout_toRightOf="@+id/image4"
                android:text="@string/description4"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>